[package]
name = "rocket_airlock"
version = "0.1.0"
description = """TL;DR: Authentication and Authorization for rocket applications.

The security airlock is the entry point to a rocket. Everything from the outside environment
that wants to enter a rocket, needs to go through its hatches and pass all their security checks.
"""
documentation = "https://docs.rs/rocket_airlock/"
homepage = "https://github.com/Weasy666/rocket_airlock"
repository = "https://github.com/Weasy666/rocket_airlock"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"


[workspace]
members = ["examples/simple", "examples/openid_connect"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "45b4436", default-features = false, features = ["private-cookies"] }
log = "0.4"
yansi = "0.5"
