[package]
name = "openid_connect"
version = "0.2.2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
publish = false
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["secrets"] }
rocket_airlock = { path = "../../" }
openidconnect = "2.0.0-beta.1"
anyhow = "1.0.38"
log = "0.4.14"
