[package]
name = "simple"
version = "0.2.2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
publish = false
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["secrets"] }
rocket_airlock = { path = "../../" }
serde = "1.0.124"
log = "0.4.14"
