[package]
name = "simple"
version = "0.2.2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
publish = false
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["secrets"] }
rocket_airlock = { path = "../../" }
serde = "1.0.124"
log = "0.4.14"
