[package]
name = "simple"
version = "0.2.2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
publish = false
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", default-features = false, features = ["secrets"] }
rocket_airlock = { path = "../../" }
serde = "1.0.124"
anyhow = "1.0.38"
thiserror = "1.0.63"
log = "0.4.14"
